<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/menu_text_sort">
        <menu>
            <group android:id="@+id/menu_group_sort"
                android:checkableBehavior="single">
                <item android:id="@+id/menu_sort_none"
                    android:checked="true"
                    android:title="@string/menu_text_sort_none" />
                <item android:id="@+id/menu_sort_az"
                    android:title="@string/menu_text_sort_az" />
                <item android:id="@+id/menu_sort_za"
                    android:title="@string/menu_text_sort_za" />
            </group>
        </menu>
    </item>

    <item android:title="@string/menu_text_filter">
        <menu>
            <group android:id="@+id/menu_group_filter"
                android:checkableBehavior="single">
                <item android:id="@+id/menu_filter_none"
                    android:checked="true"
                    android:title="@string/menu_text_filter_none" />
                <item android:id="@+id/menu_filter_type"
                    android:title="@string/menu_text_filter_type" />
                <item android:id="@+id/menu_filter_price"
                    android:title="@string/menu_text_filter_price" />
            </group>
        </menu>
    </item>

</menu>